--- a/app/src/main/res/layout/custom_dialog_manage_profil.xml
+++ b/app/src/main/res/layout/custom_dialog_manage_profil.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="7dp"
     >
     <!--Modifier Username-->
     <LinearLayout
@@ -18,6 +19,7 @@
             android:layout_height="wrap_content"
             android:inputType="text"
             android:text="Username" />
+
         <TextView
             android:id="@+id/manage_profil_username_err"
             android:layout_width="match_parent"
@@ -35,10 +37,10 @@
 
             <Button
                 android:id="@+id/manage_profil_dispo"
+                style="@style/buttonCustom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:background="@drawable/button_border"
                 android:padding="10dp"
                 android:text="Vérifier la disponibilité"
                 android:textColor="@color/colorPrimary" />
@@ -51,10 +53,10 @@
 
             <Button
                 android:id="@+id/manage_profil_username_confirm"
+                style="@style/buttonCustom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:background="@drawable/button_border"
                 android:padding="10dp"
                 android:text="Confirmer"
                 android:textColor="@color/colorPrimary" />
@@ -91,13 +93,29 @@
 
             <Button
                 android:id="@+id/manage_profil_email_btn"
+                style="@style/buttonCustom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:background="@drawable/button_border"
                 android:padding="10dp"
                 android:text="Confirmer"
                 android:textColor="@color/colorPrimary" />
+        </com.balysv.materialripple.MaterialRippleLayout>
+
+        <com.balysv.materialripple.MaterialRippleLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp">
+
+            <Button
+                android:id="@+id/manage_profil_cancel_email"
+                style="@style/buttonCustom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:padding="10dp"
+                android:text="Fermer"
+                android:textColor="@color/colorRed" />
         </com.balysv.materialripple.MaterialRippleLayout>
     </LinearLayout>
 
@@ -106,7 +124,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <EditText
             android:id="@+id/manage_profil_edit_pass"
@@ -145,11 +163,11 @@
 
             <Button
                 android:id="@+id/manage_profil_pass_btn"
+                style="@style/buttonCustom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
 
-                android:background="@drawable/button_border"
+                android:layout_gravity="center_horizontal"
                 android:padding="10dp"
                 android:text="Changer de mot de passe"
                 android:textColor="@color/colorPrimary" />
@@ -157,17 +175,17 @@
 
         <com.balysv.materialripple.MaterialRippleLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="5dp"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp">
 
             <Button
                 android:id="@+id/manage_profil_cancel_pass"
+                style="@style/buttonCustom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:background="@drawable/button_border"
                 android:padding="10dp"
-                android:text="Annuler"
+                android:text="Fermer"
                 android:textColor="@color/colorRed" />
         </com.balysv.materialripple.MaterialRippleLayout>
     </LinearLayout>
@@ -194,7 +212,7 @@
                 android:textColor="@color/colorRed" />
         </com.balysv.materialripple.MaterialRippleLayout>
 
-        <View
+        <!--<View
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:background="@color/LightGrey" />
@@ -211,6 +229,21 @@
                 android:background="@color/transparent"
                 android:padding="10dp"
                 android:text="Désactiver le compte"
+                android:textColor="@color/colorRed" />
+        </com.balysv.materialripple.MaterialRippleLayout>-->
+        <com.balysv.materialripple.MaterialRippleLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp">
+
+            <Button
+                android:id="@+id/manage_profil_cancel_other"
+                style="@style/buttonCustom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:padding="10dp"
+                android:text="Fermer"
                 android:textColor="@color/colorRed" />
         </com.balysv.materialripple.MaterialRippleLayout>
 
