--- a/app/src/main/res/layout/fragment_video_dialog.xml
+++ b/app/src/main/res/layout/fragment_video_dialog.xml
@@ -7,16 +7,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".VideoDialogFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <com.balysv.materialripple.MaterialRippleLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <Button
             android:id="@+id/VideoCloseBtn"
+            style="@style/buttonCustom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/transparent"
             android:drawableEnd="@drawable/ic_clear_color"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
