--- a/app/src/main/res/layout/option_edit_element.xml
+++ b/app/src/main/res/layout/option_edit_element.xml
@@ -53,12 +53,11 @@
         <Button
 
             android:id="@+id/sondage_edit_option_upload_btn"
-            style="@style/Widget.AppCompat.Button"
+            style="@style/buttonCustom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:background="@drawable/button_border"
             android:drawableTop="@drawable/ic_file_upload_color"
             android:padding="10dp"
             android:text="Télécharger"
@@ -84,6 +83,8 @@
         android:layout_gravity="center"
         android:adjustViewBounds="true"
         android:cropToPadding="false"
+        android:maxHeight="100dp"
+        android:scaleType="fitCenter"
         android:layout_weight="1"
         android:id="@+id/sondage_edit_option_image_preview" />
 
