--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,20 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="buttonCustom" parent="@style/Widget.AppCompat.Button"><item name="android:gravity">center_vertical|center_horizontal</item>
+    <item name="android:textColor">@color/colorPrimaryMedDark</item>
+    <item name="android:shadowColor">#FF000000</item>
+    <item name="android:background">@drawable/button_custom</item>
+    <item name="android:focusable">true</item>
+    <item name="android:clickable">true</item>
+</style>
+    <style name="buttonImageCustom" parent="@style/Widget.AppCompat.ImageButton"><item name="android:gravity">center_vertical|center_horizontal</item>
+        <item name="android:tint">@color/colorPrimaryMedDark</item>
+        <item name="android:shadowColor">#FF000000</item>
+        <item name="android:background">@drawable/button_custom</item>
+        <item name="android:focusable">true</item>
+        <item name="android:clickable">true</item>
+    </style>
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
